--- a/risorse.qrc
+++ b/risorse.qrc
@@ -5,5 +5,7 @@
         <file>Salvataggio dati/Immagini/dragonball.jpg</file>
         <file>Salvataggio dati/Immagini/fifa19.jpg</file>
         <file>Salvataggio dati/Immagini/Munchking.jpg</file>
+        <file>Salvataggio dati/Immagini/Dixit.jpg</file>
+        <file>Salvataggio dati/Immagini/JustCause4.jpg</file>
     </qresource>
 </RCC>
